--- a/templ/index.html
+++ b/templ/index.html
@@ -29,6 +29,7 @@
 			<link rel="stylesheet" href="css/fonts.css" />
 			<link rel="stylesheet" href="css/main.css" />
 			<link rel="stylesheet" href="css/media.css" />
+			<style></style>
 		</head>
 		<body class = 'isHome'>
 			<header>
@@ -81,7 +82,7 @@
 					</div>
 					<div class="bg_white hidden-xs"></div>
 					<div class="row">
-						<div class="col-md-9 col-md-push-2 col-sm-11 col-ms-push-1 col-xs-10 col-xs-push-2 ">
+						<div class="col-md-10 col-md-offset-1 col-sm-10 col-ms-offset-1">
 							<div class="nout_item hidden-xs"><img src="img/nout.png" alt=""></div>
 						</div>
 					</div>
@@ -107,7 +108,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 col-md-push-2 | col-sm-6  | col-xs-6">
-							<div class="My_img"><img src="img/myphoto.png" alt="Фото разработчика"></div>
+							<div class="My_img"><img class= 'img-responsive' src="img/myphoto.png" alt="Фото разработчика"></div>
 						</div>
 						<div class="col-md-5 col-md-push-1 | col-sm-6  | col-xs-6">
 							<div class="Inf_addit">Так-же изнакомтесь <span class = "Colorful">с моими работами </span></div>
@@ -157,10 +158,61 @@
 						<div class="background_container">
 							<div class="container">
 								<div class="row">
-								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №1</p><img src="img/first.jpg" alt=""></div></div>
-								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №2</p><img src="img/first.jpg" alt=""></div></div>
-								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №3</p><img src="img/first.jpg" alt=""></div></div>
+								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №1</p><img class = 'img-responsive' src="img/first.jpg" alt=""></div></div>
+								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №2</p><img class = 'img-responsive' src="img/first.jpg" alt=""></div></div>
+								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №3</p><img class = 'img-responsive' src="img/first.jpg" alt=""></div></div>
 								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="Fourth_section">
+			<div class="Img_title_fourth"><img class = 'img-responsive' src="img/second_line.png" alt=""></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="Fourth_title">обратная связь</div>
+					</div>
+				</div>
+			</div>
+			<div class="Fourth_wrapp_content">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-6 col-sm-6 col-xs-10 col-xs-offset-1">
+							<div class="Fourth_list">
+								<ul class = "hidden-xs">
+										<li>1. Слышу и понимаю Вас.</li>
+										<li>2. Проектирование UI/UX - архитектуру</li>
+										<li>3. Разработка отзывчевого сайте</li>
+										<li>4. Виртуозно использую шрифты</li>
+									</ul>
+
+									<ul class = "hidden-md hidden-sm hidden-lg hidden-xl">
+										<li>1. Слышу и понимаю Вас. </li>
+										<li>2. Грамотное UI/UX      </li>
+										<li>3. Адаптивность сайта   </li>
+										<li>4. Грамотная типографика</li>
+									</ul>
+							</div>
+						</div>
+						<div class="col-md-5 col-sm-6 col-xs-12">
+							<div class="callback">
+								<form action="">
+									<input name = 'name' type="text" placeholder = 'Введите имя' />
+									<input name = 'phone'type="tel" placeholder = 'Введите телефон' />
+									<input name = ''type="email" placeholder = 'Введите E-mail' />
+									<div class="button_call_me button">Отправить</div>
+									<div class="social_menu">
+										<ul>
+											<li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+											<li><a href="#"><i class="fa fa-codepen" aria-hidden="true"></a></i></li>
+											<li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+										</ul>
+									</div>
+								</form>
 							</div>
 						</div>
 					</div>
