--- a/templ/index.html
+++ b/templ/index.html
@@ -1,10 +1,5 @@
 		<!DOCTYPE html>
-		<!--[if lt IE 7]><html lang="ru" class="lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-		<!--[if IE 7]><html lang="ru" class="lt-ie9 lt-ie8"><![endif]-->
-		<!--[if IE 8]><html lang="ru" class="lt-ie9"><![endif]-->
-		<!--[if gt IE 8]><!-->
 		<html lang="ru">
-		<!--<![endif]-->
 		<head>
 			<meta charset="utf-8" />
 			<title>Slardarius</title>
@@ -58,7 +53,7 @@
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 col col-xs-11 col-xs-push-1">
-								<div class="list">
+								<div class="list active_list">
 									<ul class = "hidden-xs">
 										<li>1. Слышу и понимаю Вас.</li>
 										<li>2. Проектирование UI/UX - архитектуру</li>
@@ -95,7 +90,7 @@
 						<div class="col-md-6">
 							<div class="wrapp">
 								<div class="col-md-12 col-md-push-6 col-sm-12 col-xs-12">
-									<div class="Second_title">Кто же я такой?</div>
+									<div class="Second_title wow slideInLeft" data-wow-offset = '130' >Кто же я такой?</div>
 								</div>
 								<div class="col-md-12 | col-sm-12 col-sm-push-1 | col-xs-11 col-xs-push-1">
 									<div class="Text_about_me hidden-xs">
@@ -110,7 +105,7 @@
 						<div class="col-md-4 col-md-push-2 | col-sm-6  | col-xs-6">
 							<div class="My_img"><img class= 'img-responsive' src="img/myphoto.png" alt="Фото разработчика"></div>
 						</div>
-						<div class="col-md-5 col-md-push-1 | col-sm-6  | col-xs-6">
+						<div id = 'col-xs-12' class="col-md-5 col-md-push-1 | col-sm-6  | col-xs-6">
 							<div class="Inf_addit">Так-же изнакомтесь <span class = "Colorful">с моими работами </span></div>
 						</div>
 						<div class="col-md-5 col-md-push-1 | col-sm-5 col-sm-push-1 | col-xs-6">
@@ -124,16 +119,16 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-5 col-md-push-7 col-sm-12 col-xs-12">
-							<div class="Third_title">Портфолио1</div>
+							<div class="Third_title slideInRight wow" data-wow-offset = '130'>Портфолио</div>
 						</div>
 						<div class="Img_title"><img src="img/line.png" alt="Линии"></div>
 					</div>
 					<div class="row">
 						<div class="Img_background"><img src="img/second_bg_container.png" alt=""></div>
 						<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<div class="Title_whatiknow">Что же я знаю?</div>
+							<div class="Title_whatiknow fadeIn wow">Что же я знаю?</div>
 							<div class="col-md-3 col-md-push-2 col-sm-3 col-sm-push-2 col-xs-10 col-xs-push-2">
-								<div class="iknow">
+								<div class="iknow active_list">
 									<ul>
 										<li>html</li>
 										<li>css</li>
@@ -158,9 +153,9 @@
 						<div class="background_container">
 							<div class="container">
 								<div class="row">
-								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №1</p><img class = 'img-responsive' src="img/first.jpg" alt=""></div></div>
-								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №2</p><img class = 'img-responsive' src="img/first.jpg" alt=""></div></div>
-								<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №3</p><img class = 'img-responsive' src="img/first.jpg" alt=""></div></div>
+									<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №1</p><img class = 'img-responsive' src="img/first.jpg" alt=""></div></div>
+									<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №2</p><img class = 'img-responsive' src="img/first.jpg" alt=""></div></div>
+									<div class="col-md-4 col-sm-4 col-xs-4"><div class="Img_slideP"><p>Работа №3</p><img class = 'img-responsive' src="img/first.jpg" alt=""></div></div>
 								</div>
 							</div>
 						</div>
@@ -182,28 +177,28 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-sm-6 col-xs-10 col-xs-offset-1">
-							<div class="Fourth_list">
+							<div class="Fourth_list active_list">
 								<ul class = "hidden-xs">
-										<li>1. Слышу и понимаю Вас.</li>
-										<li>2. Проектирование UI/UX - архитектуру</li>
-										<li>3. Разработка отзывчевого сайте</li>
-										<li>4. Виртуозно использую шрифты</li>
-									</ul>
+									<li>1. Слышу и понимаю Вас.</li>
+									<li>2. Проектирование UI/UX - архитектуру</li>
+									<li>3. Разработка отзывчевого сайте</li>
+									<li>4. Виртуозно использую шрифты</li>
+								</ul>
 
-									<ul class = "hidden-md hidden-sm hidden-lg hidden-xl">
-										<li>1. Слышу и понимаю Вас. </li>
-										<li>2. Грамотное UI/UX      </li>
-										<li>3. Адаптивность сайта   </li>
-										<li>4. Грамотная типографика</li>
-									</ul>
+								<ul class = "hidden-md hidden-sm hidden-lg hidden-xl">
+									<li>1. Слышу и понимаю Вас. </li>
+									<li>2. Грамотное UI/UX      </li>
+									<li>3. Адаптивность сайта   </li>
+									<li>4. Грамотная типографика</li>
+								</ul>
 							</div>
 						</div>
 						<div class="col-md-5 col-sm-6 col-xs-12">
 							<div class="callback">
 								<form action="">
-									<input name = 'name' type="text" placeholder = 'Введите имя' />
-									<input name = 'phone'type="tel" placeholder = 'Введите телефон' />
-									<input name = ''type="email" placeholder = 'Введите E-mail' />
+									<input autofocus id = 'Name'  onchange = 'onFucus('Name')' name = 'name' type="text" placeholder = 'Введите имя' />
+									<input autofocus id = 'Phone' name = 'phone'type="tel" placeholder = 'Введите телефон' />
+									<input autofocus id = 'Email' name = ''type="email" placeholder = 'Введите E-mail' />
 									<div class="button_call_me button">Отправить</div>
 									<div class="social_menu">
 										<ul>
@@ -219,6 +214,22 @@
 				</div>
 			</div>
 		</section>
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 col-sm-4 col-xs-12">
+						<ul class = 'active_list'>
+							<li><a href="#">обо мне</a></li>
+							<li><a href="#">портфолио</a></li>
+							<li><a href="#">контакты</a></li>
+						</ul>
+					</div>
+					<div class="col-md-8 col-sm-4 col-sm-push-4 col-xs-12">
+						<div class="text_title">Slardarius</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 			<!--[if lt IE 9]>
 			<script src="libs/html5shiv/es5-shim.min.js"></script>
 			<script src="libs/html5shiv/html5shiv.min.js"></script>
