--- a/DeltaDigital/index.html
+++ b/DeltaDigital/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Start shablon</title>
+	<title>Delta Digital</title>
 	<meta name="description" content="###" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,17 +38,17 @@
 	<section class="content">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12 col-sm-12">
 					<div class="content__title">
 						<h1>Наши работы</h1>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<div class="content__items">
 						<div class="content__items__img">
-							<img class = 'img-responsive' src="img/temp.jpg" alt="">
+							<img id ='kik' class = 'img-responsive' src="img/temp.jpg" alt="">
 						</div>
 						<div class="content__items__title">
 							Temp title
@@ -61,7 +61,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<div class="content__items">
 						<div class="content__items__img">
 							<img class = 'img-responsive' src="img/temp.jpg" alt="">
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 					<div class="content__items">
 						<div class="content__items__img">
 							<img class = 'img-responsive' src="img/temp.jpg" alt="">
@@ -97,7 +97,7 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 col-sm-4 col-xs-12">
 				<div class="content__items">
 					<div class="content__items__img">
 						<img class = 'img-responsive' src="img/temp.jpg" alt="">
@@ -113,7 +113,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4 col-xs-12">
 				<div class="content__items">
 					<div class="content__items__img">
 						<img class = 'img-responsive' src="img/temp.jpg" alt="">
@@ -129,7 +129,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4 col-xs-12">
 				<div class="content__items">
 					<div class="content__items__img">
 						<img class = 'img-responsive' src="img/temp.jpg" alt="">
@@ -155,6 +155,24 @@
 			</div>
 		</div>
 	</section>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-7">
+					<ul class="footer">
+					<li class="footer__items"><a href="#">главная</a></li>
+					<li class="footer__items"><a href="#">о нас</a></li>
+					<li class="footer__items"><a href="#">контакты</a></li>
+				</ul>
+				</div>
+				<div class="col-md-5">
+					<div class="footer__title">
+						delta digital (c) 2017
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<!--[if lt IE 9]>
 			<script src="libs/html5shiv/es5-shim.min.js"></script>
 			<script src="libs/html5shiv/html5shiv.min.js"></script>
@@ -162,7 +180,10 @@
 			<script src="libs/respond/respond.min.js"></script>
 		<![endif]-->
 		<!-- Just jquery -->
+		<link rel="stylesheet" href="css/media.css">
 		<link rel="stylesheet" href="css/main.css">
+
+		<script type ='text/javascript' src ='libs/jquery/jquery-1.11.1.min.js'></script>
 		<script type ='text/javascript' src ='js/common.js'></script>
 	</body>
 	</html>
