--- a/DeltaDigital/index.html
+++ b/DeltaDigital/index.html
@@ -9,6 +9,7 @@
 	<link rel="shortcut icon" href="favicon.png" />
 
 	<link rel="stylesheet" href="css/normolize.libs.min.css">
+	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css">
 	<link rel="stylesheet" href="css/bootstrap-grid-3.3.1.min.libs.min.css">
 	<style> body { opacity: 0; overflow-x: hidden; } html { background-color:#eaebed;} </style>
 </head>
@@ -184,6 +185,8 @@
 		<link rel="stylesheet" href="css/main.css">
 
 		<script type ='text/javascript' src ='libs/jquery/jquery-1.11.1.min.js'></script>
+		<script type ='text/javascript' src ='libs/fancybox/jquery.fancybox.pack.js'></script>
+		<script type ='text/javascript' src ='libs/fancybox/jquery.fancybox.js'></script>
 		<script type ='text/javascript' src ='js/common.js'></script>
 	</body>
 	</html>
