--- a/DeltaDigital/index.html
+++ b/DeltaDigital/index.html
@@ -17,12 +17,12 @@
 	<header>
 		<div class="container">
 			<div class="top-menu">
-				<div class="col-md-6">
+				<div class="col-md-6 col-sm-6 col-xs-3">
 					<div class="top-menu__logo">
 						<img src="img/logo.png" alt="Site logo.">
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 col-sm-6 hidden-xs">
 					<div class="top-menu__menu">
 						<nav>
 							<ul>
@@ -33,147 +33,156 @@
 						</nav>
 					</div>
 				</div>
-			</div>
-		</div>
-	</header>
-	<section class="content">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-sm-12">
-					<div class="content__title">
-						<h1>Наши работы</h1>
+				<div class="col-xs-6 hidden-sm hidden-md hidden-lg hidden-xl">
+					<div class="top-menu__menu--burger">
+						<div id = 'important' class="span">
+							<div class="span_center"></div>
+						</div>
+						<div class = 'wrapper__items show' ><a href="#"></a>Главная</div>
+						<div  class = 'wrapper__items show' ><a href="#"></a>О нас</div>
+						<div  class = 'wrapper__items show' ><a href="#"></a>Контакты</div></div>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-4 col-sm-4 col-xs-12">
-					<div class="content__items">
-						<div class="content__items__img">
-							<img id ='kik' class = 'img-responsive' src="img/temp.jpg" alt="">
-						</div>
-						<div class="content__items__title">
-							Temp title
-						</div>
-						<div id ='con' class="content__items__information">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, autem!
-						</div>
-						<div id = 'show' class="content__items__button">
-							подробнее
+		</header>
+		<section class="content">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 col-sm-12">
+						<div class="content__title">
+							<h1>Наши работы</h1>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4 col-xs-12">
-					<div class="content__items">
-						<div class="content__items__img">
-							<img class = 'img-responsive' src="img/temp.jpg" alt="">
+				<div class="row">
+					<div class="col-md-4 col-sm-4 col-xs-12">
+						<div class="content__items">
+							<div class="content__items__img">
+								<img id ='kik' class = 'img-responsive' src="img/temp.jpg" alt="">
+							</div>
+							<div class="content__items__title">
+								Temp title
+							</div>
+							<div id ='con' class="content__items__information">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, autem!
+							</div>
+							<div id = 'show' class="content__items__button">
+								подробнее
+							</div>
 						</div>
-						<div class="content__items__title">
-							Temp title
+					</div>
+					<div class="col-md-4 col-sm-4 col-xs-12">
+						<div class="content__items">
+							<div class="content__items__img">
+								<img class = 'img-responsive' src="img/temp.jpg" alt="">
+							</div>
+							<div class="content__items__title">
+								Temp title
+							</div>
+							<div id ='con' class="content__items__information">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, quisquam.
+							</div>
+							<div id = 'show' class="content__items__button">
+								подробнее
+							</div>
 						</div>
-						<div id ='con' class="content__items__information">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, quisquam.
-						</div>
-						<div id = 'show' class="content__items__button">
-							подробнее
+					</div>
+					<div class="col-md-4 col-sm-4 col-xs-12">
+						<div class="content__items">
+							<div class="content__items__img">
+								<img class = 'img-responsive' src="img/temp.jpg" alt="">
+							</div>
+							<div class="content__items__title">
+								Temp title
+							</div>
+							<div id ='con' class="content__items__information">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, minima.
+							</div>
+							<div id = 'show' class="content__items__button">
+								подробнее
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-4 col-xs-12">
-					<div class="content__items">
-						<div class="content__items__img">
-							<img class = 'img-responsive' src="img/temp.jpg" alt="">
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 col-sm-4 col-xs-12">
+						<div class="content__items">
+							<div class="content__items__img">
+								<img class = 'img-responsive' src="img/temp.jpg" alt="">
+							</div>
+							<div class="content__items__title">
+								Temp title
+							</div>
+							<div id ='con' class="content__items__information">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, minima.
+							</div>
+							<div id = 'show' class="content__items__button">
+								подробнее
+							</div>
 						</div>
-						<div class="content__items__title">
-							Temp title
+					</div>
+					<div class="col-md-4 col-sm-4 col-xs-12">
+						<div class="content__items">
+							<div class="content__items__img">
+								<img class = 'img-responsive' src="img/temp.jpg" alt="">
+							</div>
+							<div class="content__items__title">
+								Temp title
+							</div>
+							<div id ='con' class="content__items__information">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, minima.
+							</div>
+							<div id = 'show' class="content__items__button">
+								подробнее
+							</div>
 						</div>
-						<div id ='con' class="content__items__information">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, minima.
-						</div>
-						<div id = 'show' class="content__items__button">
-							подробнее
+					</div>
+					<div class="col-md-4 col-sm-4 col-xs-12">
+						<div class="content__items">
+							<div class="content__items__img">
+								<img class = 'img-responsive' src="img/temp.jpg" alt="">
+							</div>
+							<div class="content__items__title">
+								Temp title
+							</div>
+							<div id ='con' class="content__items__information">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, minima.
+							</div>
+							<div id = 'show' class="content__items__button">
+								подробнее
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-sm-4 col-xs-12">
-				<div class="content__items">
-					<div class="content__items__img">
-						<img class = 'img-responsive' src="img/temp.jpg" alt="">
-					</div>
-					<div class="content__items__title">
-							Temp title
-					</div>
-					<div id ='con' class="content__items__information">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, minima.
-					</div>
-					<div id = 'show' class="content__items__button">
-						подробнее
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="content__button">загрузить еще</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4 col-sm-4 col-xs-12">
-				<div class="content__items">
-					<div class="content__items__img">
-						<img class = 'img-responsive' src="img/temp.jpg" alt="">
+		</section>
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-7">
+						<ul class="footer">
+							<li class="footer__items"><a href="#">главная</a></li>
+							<li class="footer__items"><a href="#">о нас</a></li>
+							<li class="footer__items"><a href="#">контакты</a></li>
+						</ul>
 					</div>
-					<div class="content__items__title">
-							Temp title
-					</div>
-					<div id ='con' class="content__items__information">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, minima.
-					</div>
-					<div id = 'show' class="content__items__button">
-						подробнее
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-4 col-xs-12">
-				<div class="content__items">
-					<div class="content__items__img">
-						<img class = 'img-responsive' src="img/temp.jpg" alt="">
-					</div>
-					<div class="content__items__title">
-							Temp title
-					</div>
-					<div id ='con' class="content__items__information">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, minima.
-					</div>
-					<div id = 'show' class="content__items__button">
-						подробнее
+					<div class="col-md-5">
+						<div class="footer__title">
+							delta digital (c) 2017
+						</div>
 					</div>
 				</div>
 			</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="content__button">загрузить еще</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-7">
-					<ul class="footer">
-					<li class="footer__items"><a href="#">главная</a></li>
-					<li class="footer__items"><a href="#">о нас</a></li>
-					<li class="footer__items"><a href="#">контакты</a></li>
-				</ul>
-				</div>
-				<div class="col-md-5">
-					<div class="footer__title">
-						delta digital (c) 2017
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+		</footer>
 	<!--[if lt IE 9]>
 			<script src="libs/html5shiv/es5-shim.min.js"></script>
 			<script src="libs/html5shiv/html5shiv.min.js"></script>
