Правки в макет DeltaDIgital

--- a/DeltaDigital/index.html
+++ b/DeltaDigital/index.html
@@ -37,8 +37,10 @@
 					<div class="top-menu__menu--burger">
 						<div id = 'important' class="span">
 							<div class="span_center"></div>
+							<div class="span_first ext switch"></div>
+							<div class="span_second ext switch"></div>
 						</div>
-						<div class = 'wrapper__items show' ><a href="#"></a>Главная</div>
+						<div  class = 'wrapper__items show' ><a href="#"></a>Главная</div>
 						<div  class = 'wrapper__items show' ><a href="#"></a>О нас</div>
 						<div  class = 'wrapper__items show' ><a href="#"></a>Контакты</div></div>
 					</div>
