--- a/Kruta/index.html
+++ b/Kruta/index.html
@@ -34,10 +34,10 @@
 				<div class="col-md-7 hidden-sm hidden-xs">
 					<nav>
 						<ul>
-							<li><a href="#" id = 'Menu'> меню</a></li>
-							<li><a href="#" id = 'AboutUs' > о нас </a></li>
-							<li><a href="#" id = 'Reviews' > отзывы </a></li>
-							<li><a href="#" id = 'Pay' > доставка и оплата </a> </li>
+							<li><a href="#" id = 'MenuLI'> меню</a></li>
+							<li><a href="#" id = 'AboutUsLI' > о нас </a></li>
+							<li><a href="#" id = 'ReviewsLI' > отзывы </a></li>
+							<li><a href="#" id = 'PayLI' > доставка и оплата </a> </li>
 						</ul>
 					</nav>
 				</div>
@@ -58,7 +58,22 @@
 				</div>
 				<div class="col-xs-7">
 					<div class="header__top_line__burger hidden-sm hidden-md hidden-lg hidden-xl">
-						<i class="fa fa-bars" aria-hidden="true"></i>
+						
+						<i class="fa fa-bars" ></i>
+						<i class="fa fa-times HIDE" ></i>
+
+						<div class="header__top_line__burger__items HIDE">
+							<a href="#"  class = 'MenuLI'> меню</a>
+						</div>
+						<div class="header__top_line__burger__items HIDE">
+							<a href="#"  class = 'AboutUsLI'> о нас</a>
+						</div>
+						<div class="header__top_line__burger__items HIDE">
+							<a href="#"  class = 'ReviewsLI'> отзывы</a>
+						</div>
+						<div class="header__top_line__burger__items HIDE">
+							<a href="#"  class = 'PayLI'> доставка и оплата</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -1159,23 +1174,23 @@
 					</div>
 					<div class="col-md-5 col-md-push-2 col-sm-5 col-xs-12">
 						<div class = 'Callback__forma'>
-							<form action="">
+							<form id = "form" action="POST">
 								<table>
 									<tr>
 										<td>Название комании:		</td>
-										<td><input type="text" name = 'company' placeholder = 'ОО Компания'> </td>
+										<td><input type="text" name = 'company' placeholder = 'ОО Компания' required> </td>
 									</tr>
 									<tr>
 										<td>Ваше имя:						</td>
-										<td><input type="text" name = 'Name' id = 'name' placeholder = 'Шутюк Валерий'>	</td>
+										<td><input type="text" name = 'Name' id = 'name' placeholder = 'Шутюк Валерий' required>	</td>
 									</tr>
 									<tr>
 										<td>Адрес доставки:			</td>
-										<td><input type="text" name = 'adress' placeholder = 'мкр-н Северное Чертаново, д. 1а, корп. 1'>	</td>
+										<td><input type="text" name = 'adres' placeholder = 'мкр-н Северное Чертаново, д. 1а, корп. 1'>	</td>
 									</tr>
 									<tr>
 										<td>Заказ:			</td>
-										<td><input type="text" name = 'zakaz' id = 'zakaz' placeholder = 'Гороховый суп'>	</td>
+										<td><input type="text" name = 'zakaz' id = 'zakaz' placeholder = 'Гороховый суп' required>	</td>
 									</tr>
 									<tr>
 										<td>Дата доставки:</td>
@@ -1184,7 +1199,7 @@
 									<tr>
 										<td>Время:</td>
 										<td>
-											<select name="time" id="">
+											<select name="time">
 												<option value="до 9:00"> до 9:00</option>
 												<option value="c 9:00 до 11:00"> c 9:00 до 11:00</option>
 												<option value="c 11:00 до 13:00">c 11:00 до 13:00</option>
