--- a/Kruta/index.html
+++ b/Kruta/index.html
@@ -34,10 +34,10 @@
 				<div class="col-md-7 hidden-sm hidden-xs">
 					<nav>
 						<ul>
-							<li><a href="#" class = 'MenuLI'> меню</a></li>
-							<li><a href="#" class = 'AboutUsLI' > о нас </a></li>
-							<li><a href="#" class = 'ReviewsLI' > отзывы </a></li>
-							<li><a href="#" class = 'PayLI' > доставка и оплата </a> </li>
+							<li><a href="#Menu" class = 'MenuLI'> меню</a></li>
+							<li><a href="#About" class = 'AboutUsLI' > о нас </a></li>
+							<li><a href="#Reviews" class = 'ReviewsLI' > отзывы </a></li>
+							<li><a href="#Callback" class = 'PayLI' > доставка и оплата </a> </li>
 						</ul>
 					</nav>
 				</div>
@@ -116,7 +116,7 @@
 		</div>
 	</div>
 </header>
-<section class="About">
+<section id = 'About' class="About">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12">
@@ -149,7 +149,7 @@
 		</div>
 	</div>
 </section>
-<section class="Menu">
+<section id = '#Menu' class="Menu">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -1106,7 +1106,7 @@
 	</div>
 </section>
 
-<section class="Reviews">
+<section id = 'Reviews' class="Reviews">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -1142,7 +1142,7 @@
 		</div>
 	</div>
 </section>
-<section class="Callback">
+<section id = 'Callback' class="Callback">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12">
@@ -1245,10 +1245,10 @@
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<div class="footer__menu">
 							<ul>
-								<li><a href="#"> меню</a></li>
-								<li><a href="#"> о нас </a></li>
-								<li><a href="#"> отзывы </a></li>
-								<li><a href="#"> доставка и оплата </a> </li>
+								<li><a href="#Menu"> меню</a></li>
+								<li><a href="#About"> о нас </a></li>
+								<li><a href="#Reviews"> отзывы </a></li>
+								<li><a href="#Callback"> доставка и оплата </a> </li>
 							</ul>
 						</div>
 					</div>
