--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -79,7 +79,33 @@
 			</div>
 		</div>
 	</header>
-
+	<section class ="AboutMe">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="AboutMe__title">Запасчиков Артём Сергеевич</div>
+				</div>
+				<div class="col-md-12">
+					<div class="AboutMe__education">
+						<p class = 'title'>Образование:</p>
+						<p class = 'information' ><i class="fa fa-circle" aria-hidden="true"></i>
+								“Химико-технологический колледж” г. Каменское, специальность - “Разработка програмного 			 	обеспечения”, 2012-2015г. 
+						</p>
+						<p class = 'information' ><i class="fa fa-circle" aria-hidden="true"></i>
+								УДХТУ(Украиский Государственный Химико-технологический университет г.Днепр специальность “Информационные системы”,2016-2018г.
+						</p> 
+						<p class = 'title'>Сторонние проекты:</p>
+						<p class = 'information' ><i class="fa fa-circle" aria-hidden="true"></i>
+								"Дни Турбиных" - работаю на позиции Front end и Веб дизайнер.
+						</p> 
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="PersonalQualities">
+		
+	</section>
 
 
 
