--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -19,13 +19,13 @@
 		<div class="container">
 			<div class="row">
 				<div class="top_line">
-					<div class="col-md-3">
+					<div class="col-md-3 col-sm-3">
 						<div class="top_line__logo">Slardarius</div>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-sm-9">
 						<div class="top_line__menu">
 							<nav>
-								<ul>
+								<ul class = 'hidden-xs'>
 									<li><a href="">обо мне</a></li>
 									<li><a href="">портфолио</a></li>
 									<li><a href="">обратная связь </a></li>
@@ -39,17 +39,17 @@
 		<div class="container">
 			<div class="row">
 				<div class="center_content">
-					<div class="col-md-12">
+					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="center_content__title">
 							<span>slardarius </span>
 						</div>
 					</div>
-					<div class="col-md-12">
+					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="center_content__inform">
 							front end &#38; web design
 						</div>
 					</div>
-					<div class="col-md-12">
+					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="center_content__inform">
 							разработчик
 						</div>
@@ -60,10 +60,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="bottom_content">
-					<div class="col-md-3 col-md-push-2">
+					<div class="col-md-3 col-md-push-2 col-sm-3 col-sm-push-2 col-xs-12">
 						<div class="button bottom_content__button_about">обо мне</div>
 					</div>
-					<div class="col-md-3 col-md-push-4">
+					<div class="col-md-3 col-md-push-4 col-sm-3 col-sm-push-4 col-xs-12">
 						<div class="button bottom_content__button_work">сделать заказ</div>
 					</div>
 				</div>
@@ -71,7 +71,7 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12 col-sm-12 col-xs-12">
 					<div class="buttons__next">
 						<i class="fa fa-chevron-down" aria-hidden="true"></i>
 					</div>
@@ -89,14 +89,14 @@
 					<div class="AboutMe__education">
 						<p class = 'title'>Образование:</p>
 						<p class = 'information' ><i class="fa fa-circle" aria-hidden="true"></i>
-								“Химико-технологический колледж” г. Каменское, специальность - “Разработка програмного 			 	обеспечения”, 2012-2015г. 
+							“Химико-технологический колледж” г. Каменское, специальность - “Разработка програмного 			 	обеспечения”, 2012-2015г. 
 						</p>
 						<p class = 'information' ><i class="fa fa-circle" aria-hidden="true"></i>
-								УДХТУ(Украиский Государственный Химико-технологический университет г.Днепр специальность “Информационные системы”,2016-2018г.
+							УДХТУ(Украиский Государственный Химико-технологический университет г.Днепр специальность “Информационные системы”,2016-2018г.
 						</p> 
 						<p class = 'title'>Сторонние проекты:</p>
 						<p class = 'information' ><i class="fa fa-circle" aria-hidden="true"></i>
-								"Дни Турбиных" - работаю на позиции Front end и Веб дизайнер.
+							"Дни Турбиных" - работаю на позиции Front end и Веб дизайнер.
 						</p> 
 					</div>
 				</div>
@@ -104,9 +104,102 @@
 		</div>
 	</section>
 	<section class="PersonalQualities">
-		
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="PersonalQualities__img">
+						<img src="img/27.jpg" alt="WORK">
+						<p class = 'Group' >Дни Турбиных</p>
+					</div>
+				</div>
+				<div class="col-md-5 col-md-push-1">
+					<div class="PersonalQualities__text">
+						<p class = 'Name'>личные качества</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+						внимательность и высокая ответственность</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+						коммуникабельность</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+						страсть к перфекционизму</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+							способность понятно излагать свои 
+						мысли — 	как устно, так и письменно.</p>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="Technologies">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="PersonalQualities__text">
+						<p class = 'Name'>Технологии</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+						html</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+						css</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+						javascript</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+							sass</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+							ReactJS</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="Technologies__img">
+						<img src="img/27.jpg" alt="WORK">
+						<p class = 'Group' >Fresh Food</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
+	<section class="WoksSkill">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="WoksSkill__img">
+						<img src="img/27.jpg" alt="WORK">
+						<p class = 'Group' >Fresh Food</p>
+					</div>
+				</div>
+				<div class="col-md-5 col-md-push-1">
+					<div class="WoksSkill__text">
+						<p class = 'Name'>Профессиональные качества</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+						Слышу и понимаю Вас.</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+						Проектирование UI/UX - архитектуру	</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+						Разработка отзывчевого сайте</p>
+						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
+							Виртуозно использую шрифты</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="Modeling">
+		<div class="container">
+			<div class="row">
+				<div class="lineFrist  hidden-xs hidden-sm"></div>
+				<div class="lineSecond hidden-xs hidden-sm"></div>
+				<div class="col-md-4 col-sm-4 col-xs-12"><img src="img/1.png" alt="Prototype">
+				<p>Разработка прототипа сайта</p>
+				</div>
+				<div class="col-md-4 col-sm-4 col-xs-12"><img src="img/2.png" alt="Making">
+					<p class = 'Modeling__' >верстка</p>
+				</div>
+				<div class="col-md-4 col-sm-4 col-xs-12"><img src="img/3.png" alt="Adaptive">
+					<p>адаптация под любые устройства</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
